--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,8 +72,39 @@
     "    w = params['w']\n",
     "    b = params['b']\n",
     "    z = X @ w + b\n",
+    "    inter_vals = {'z':z}\n",
     "    yhat = sigmoid(z)\n",
-    "    return yhat"
+    "    return yhat, inter_vals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_cost(yhat, y):\n",
+    "    m = y.shape[0]\n",
+    "    losses = y * np.log(yhat) + (1 - y) * np.log(1 - yhat)\n",
+    "    print(f'losses {losses}')\n",
+    "    cost = -np.sum(losses, axis=0, keepdims=True)/m\n",
+    "    return cost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def back_prop(y, yhat, inter_vals):\n",
+    "    m = y.shape[0]\n",
+    "    z = inter_vals['z']\n",
+    "    dc_dyhat = (-1/m) * ((y/yhat) - ((1-y)/(1-yhat)))\n",
+    "    dyhat_dz = sigmoid(z) * (1 - sigmoid(z))\n",
+    "    dc_dz = dc_dyhat * dyhat_dz\n",
+    "    dc_db = np.sum(dc_dz, axis=0, keepdims=True)\n",
+    "    "
    ]
   },
   {
@@ -100,12 +131,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "yhat = forward_prop(X_train, params)"
+    "yhat, inter_vals = forward_prop(X_train, params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,12 +144,12 @@
     "w = np.array([[0.5], [0.75]])\n",
     "b = np.array([[1]])\n",
     "params = {'w':w,'b':b}\n",
-    "yhat = forward_prop(X, params)"
+    "yhat, inter_vals = forward_prop(X, params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +159,7 @@
        "       [0.82127358]])"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,10 +170,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = np.array([[1], [0]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "losses [[-0.11827752]\n",
+      " [-1.721899  ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cost = calculate_cost(yhat, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.92008826]])"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cost"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "grads = back_prop(yhat, y, inter_vals)"
+   ]
   }
  ],
  "metadata": {
