back prop not working yet

--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,12 +39,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def initialize_params(X_train):\n",
-    "    n = X_train.shape[1]\n",
+    "def initialize_params(X):\n",
+    "    n = X.shape[1]\n",
     "    w = np.random.randn(n, 1) * 0.1\n",
     "    b = np.zeros((1, 1))\n",
     "    params = {'w':w, 'b':b}\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,37 +79,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calculate_cost(yhat, y):\n",
     "    m = y.shape[0]\n",
     "    losses = y * np.log(yhat) + (1 - y) * np.log(1 - yhat)\n",
-    "    print(f'losses {losses}')\n",
     "    cost = -np.sum(losses, axis=0, keepdims=True)/m\n",
     "    return cost"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def back_prop(y, yhat, inter_vals):\n",
+    "def back_prop(y, yhat, inter_vals, X):\n",
     "    m = y.shape[0]\n",
     "    z = inter_vals['z']\n",
     "    dc_dyhat = (-1/m) * ((y/yhat) - ((1-y)/(1-yhat)))\n",
+    "    \n",
     "    dyhat_dz = sigmoid(z) * (1 - sigmoid(z))\n",
     "    dc_dz = dc_dyhat * dyhat_dz\n",
     "    dc_db = np.sum(dc_dz, axis=0, keepdims=True)\n",
+    "    dz_dw = np.sum(X, axis=1, keepdims=True)\n",
+    "    dc_dw = dc_dz * dz_dw\n",
+    "\n",
+    "    print(f'dz_dw {dz_dw}')\n",
+    "    print(f'dyhat_dz {dyhat_dz}')\n",
+    "    print(f'dc_dyhat {dc_dyhat}')\n",
+    "    grads = {'dw':dc_dw, 'db':dc_db}\n",
+    "    return grads\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,9 +144,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.075]\n",
+      " [0.525]]\n"
+     ]
+    }
+   ],
    "source": [
     "X = np.array([[0.8, 0.9], [0.3, 0.5]])\n",
     "w = np.array([[0.5], [0.75]])\n",
@@ -149,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +176,7 @@
        "       [0.82127358]])"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +223,7 @@
        "array([[0.92008826]])"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,12 +234,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dz_dw [[1.7]\n",
+      " [0.8]]\n",
+      "dyhat_dz [[0.09910702]\n",
+      " [0.14678329]]\n",
+      "dc_dyhat [[-0.56277821]\n",
+      " [ 2.79757178]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "grads = back_prop(y, yhat, inter_vals, X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'dw': array([[-0.09481796],\n",
+       "        [ 0.32850943]]),\n",
+       " 'db': array([[0.35486152]])}"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grads"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "grads = back_prop(yhat, y, inter_vals)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
