trying to get backprop to work

--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,15 +101,17 @@
     "    z = inter_vals['z']\n",
     "    dc_dyhat = (-1/m) * ((y/yhat) - ((1-y)/(1-yhat)))\n",
     "    \n",
-    "    dyhat_dz = sigmoid(z) * (1 - sigmoid(z))\n",
+    "    dyhat_dz = yhat * (1 - yhat)\n",
     "    dc_dz = dc_dyhat * dyhat_dz\n",
+    "    print(f'dc_dz shape {dc_dz.shape}')\n",
     "    dc_db = np.sum(dc_dz, axis=0, keepdims=True)\n",
-    "    dz_dw = np.sum(X, axis=1, keepdims=True)\n",
+    "    dz_dw = np.sum(X, axis=0, keepdims=True)\n",
+    "    print(f'dz_dw shape {dz_dw.shape}')\n",
     "    dc_dw = dc_dz * dz_dw\n",
-    "\n",
-    "    print(f'dz_dw {dz_dw}')\n",
-    "    print(f'dyhat_dz {dyhat_dz}')\n",
-    "    print(f'dc_dyhat {dc_dyhat}')\n",
+    "    print('')\n",
+    "    #print(f'dz_dw {dz_dw}')\n",
+    "    #print(f'dyhat_dz {dyhat_dz}')\n",
+    "    #print(f'dc_dyhat {dc_dyhat}')\n",
     "    grads = {'dw':dc_dw, 'db':dc_db}\n",
     "    return grads\n",
     "    "
@@ -117,7 +119,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_params(params, grads, lr=0.1):\n",
+    "    w = params['w']\n",
+    "    b = params['b']\n",
+    "    dw = grads['dw']\n",
+    "    db = grads['db']\n",
+    "    print(f'w shape {w.shape}')\n",
+    "    print(f'dw shape {dw.shape}')\n",
+    "    w = w - lr * dw\n",
+    "    b = b - lr * db\n",
+    "    new_parms = {'w':w,'b':b}\n",
+    "    return new_parms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_loop(epochs, X_train, y_train, lr):\n",
+    "    params = initialize_params(X_train)\n",
+    "    for epoch in range(epochs):\n",
+    "        yhat, inter_vals = forward_prop(X_train, params)\n",
+    "        print(f'yhat shape {yhat.shape}')\n",
+    "        print(f'z shape {inter_vals['z'].shape}')\n",
+    "        cost = calculate_cost(yhat, y_train)\n",
+    "        grads = back_prop(y_train, yhat, inter_vals, X_train)\n",
+    "        params = update_params(params, grads, lr)\n",
+    "        print(f'epoch {epoch} cost {cost}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,11 +165,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(80, 1)"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "params = initialize_params(X_train)"
+    "y_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yhat shape (80, 1)\n",
+      "z shape (80, 1)\n",
+      "dc_dz shape (80, 1)\n",
+      "dz_dw shape (1, 2)\n",
+      "\n",
+      "w shape (2, 1)\n",
+      "dw shape (80, 2)\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (2,1) (80,2) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[124], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m epochs \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1000\u001b[39m\n\u001b[0;32m      2\u001b[0m lr \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.1\u001b[39m\n\u001b[1;32m----> 4\u001b[0m \u001b[43mtrain_loop\u001b[49m\u001b[43m(\u001b[49m\u001b[43mepochs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlr\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[113], line 9\u001b[0m, in \u001b[0;36mtrain_loop\u001b[1;34m(epochs, X_train, y_train, lr)\u001b[0m\n\u001b[0;32m      7\u001b[0m cost \u001b[38;5;241m=\u001b[39m calculate_cost(yhat, y_train)\n\u001b[0;32m      8\u001b[0m grads \u001b[38;5;241m=\u001b[39m back_prop(y_train, yhat, inter_vals, X_train)\n\u001b[1;32m----> 9\u001b[0m params \u001b[38;5;241m=\u001b[39m \u001b[43mupdate_params\u001b[49m\u001b[43m(\u001b[49m\u001b[43mparams\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgrads\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlr\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mepoch \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mepoch\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m cost \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcost\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[112], line 8\u001b[0m, in \u001b[0;36mupdate_params\u001b[1;34m(params, grads, lr)\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mw shape \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mw\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdw shape \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdw\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 8\u001b[0m w \u001b[38;5;241m=\u001b[39m \u001b[43mw\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mlr\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mdw\u001b[49m\n\u001b[0;32m      9\u001b[0m b \u001b[38;5;241m=\u001b[39m b \u001b[38;5;241m-\u001b[39m lr \u001b[38;5;241m*\u001b[39m db\n\u001b[0;32m     10\u001b[0m new_parms \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m'\u001b[39m:w,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m'\u001b[39m:b}\n",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,1) (80,2) "
+     ]
+    }
+   ],
+   "source": [
+    "epochs = 1000\n",
+    "lr = 0.1\n",
+    "\n",
+    "train_loop(epochs, X_train, y_train, lr)"
    ]
   },
   {
@@ -138,9 +227,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "yhat, inter_vals = forward_prop(X_train, params)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -196,15 +283,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "losses [[-0.11827752]\n",
-      " [-1.721899  ]]\n"
+      "cost vs cost2 [[0.92008826]] : 0.920088258659517\n"
      ]
     }
    ],
@@ -234,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +353,7 @@
        " 'db': array([[0.35486152]])}"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
