added scaler class

--- a/notebooks/scaler.ipynb
+++ b/notebooks/scaler.ipynb
@@ -4,108 +4,114 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Scaler:\n",
+    "    def __init__(self):\n",
+    "        self.params = {}\n",
+    "    \n",
+    "    def fit(self, data):\n",
+    "        self.params['mean'] = np.mean(data)\n",
+    "        self.params['std_dev'] = np.std(data)\n",
+    "    \n",
+    "    def standardize(self, data):\n",
+    "        return (data - self.params['mean'])/self.params['std_dev']\n",
+    "    \n",
+    "    def fit_standardize(self, data):\n",
+    "        self.fit(data)\n",
+    "        return self.standardize(data)\n",
+    "\n",
+    "    def unstandardize(self, data):\n",
+    "        return (data * self.params['std_dev']) + self.params['mean']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x1_scaler = Scaler()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x1 = np.array([[5],[3],[2]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x1_s = x1_scaler.fit_standardize(x1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Standardized Data:\n",
-      "[[-1.41421356 -1.41421356 -1.41421356]\n",
-      " [-0.70710678 -0.70710678 -0.70710678]\n",
-      " [ 0.          0.          0.        ]\n",
-      " [ 0.70710678  0.70710678  0.70710678]\n",
-      " [ 1.41421356  1.41421356  1.41421356]]\n",
-      "Means: [7. 8. 9.]\n",
-      "Standard Deviations: [4.24264069 4.24264069 4.24264069]\n",
-      "Original Data (reversed):\n",
-      "[[ 1.  2.  3.]\n",
-      " [ 4.  5.  6.]\n",
-      " [ 7.  8.  9.]\n",
-      " [10. 11. 12.]\n",
-      " [13. 14. 15.]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[ 1.33630621],\n",
+       "       [-0.26726124],\n",
+       "       [-1.06904497]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "class StandardScaler:\n",
-    "    def __init__(self):\n",
-    "        self.params = {}\n",
-    "\n",
-    "    def fit(self, data):\n",
-    "        \"\"\"\n",
-    "        Calculate and store the mean and standard deviation for each feature.\n",
-    "        \n",
-    "        Parameters:\n",
-    "        data (ndarray): 2D array where each column is a feature.\n",
-    "        \"\"\"\n",
-    "        self.params['mean'] = np.mean(data, axis=0)\n",
-    "        self.params['std_dev'] = np.std(data, axis=0)\n",
-    "\n",
-    "    def transform(self, data):\n",
-    "        \"\"\"\n",
-    "        Standardize the data using the mean and standard deviation.\n",
-    "        \n",
-    "        Parameters:\n",
-    "        data (ndarray): 2D array where each column is a feature.\n",
-    "        \n",
-    "        Returns:\n",
-    "        ndarray: The standardized data.\n",
-    "        \"\"\"\n",
-    "        return (data - self.params['mean']) / self.params['std_dev']\n",
-    "\n",
-    "    def fit_transform(self, data):\n",
-    "        \"\"\"\n",
-    "        Fit to the data and transform it.\n",
-    "        \n",
-    "        Parameters:\n",
-    "        data (ndarray): 2D array where each column is a feature.\n",
-    "        \n",
-    "        Returns:\n",
-    "        ndarray: The standardized data.\n",
-    "        \"\"\"\n",
-    "        self.fit(data)\n",
-    "        return self.transform(data)\n",
-    "\n",
-    "    def inverse_transform(self, data):\n",
-    "        \"\"\"\n",
-    "        Revert the standardized data back to the original scale.\n",
-    "        \n",
-    "        Parameters:\n",
-    "        data (ndarray): 2D array where each column is a feature.\n",
-    "        \n",
-    "        Returns:\n",
-    "        ndarray: The data in the original scale.\n",
-    "        \"\"\"\n",
-    "        return (data * self.params['std_dev']) + self.params['mean']\n",
-    "\n",
-    "# Example usage:\n",
-    "\n",
-    "# Sample data (3 features and 5 samples)\n",
-    "data = np.array([[1.0, 2.0, 3.0],\n",
-    "                 [4.0, 5.0, 6.0],\n",
-    "                 [7.0, 8.0, 9.0],\n",
-    "                 [10.0, 11.0, 12.0],\n",
-    "                 [13.0, 14.0, 15.0]])\n",
-    "\n",
-    "# Initialize the scaler\n",
-    "scaler = StandardScaler()\n",
-    "\n",
-    "# Standardize the data\n",
-    "standardized_data = scaler.fit_transform(data)\n",
-    "\n",
-    "print(\"Standardized Data:\")\n",
-    "print(standardized_data)\n",
-    "\n",
-    "# Save the mean and standard deviation\n",
-    "print(\"Means:\", scaler.params['mean'])\n",
-    "print(\"Standard Deviations:\", scaler.params['std_dev'])\n",
-    "\n",
-    "# Inverse transform to get back the original data\n",
-    "original_data = scaler.inverse_transform(standardized_data)\n",
-    "print(\"Original Data (reversed):\")\n",
-    "print(original_data)\n"
+    "x1_s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x2 = x1_scaler.unstandardize(x1_s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5.],\n",
+       "       [3.],\n",
+       "       [2.]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x2"
    ]
   },
   {
@@ -132,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
