--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def one_hot_encoding(data):\n",
+    "    data = [str(item) for item in data]\n",
+    "    unique_category = sorted(set(data))\n",
+    "    category_index = {category : index for index, category in enumerate(unique_category)}\n",
+    "    one_hot_matrix = []\n",
+    "    for item in data:\n",
+    "        one_hot_vector = [0] * len(unique_category)\n",
+    "        index = category_index[item]\n",
+    "        one_hot_vector[index] = 1\n",
+    "        one_hot_matrix.append(one_hot_vector)\n",
+    "    one_hot_matrix = np.array(one_hot_matrix)\n",
+    "    return one_hot_matrix, category_index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,59 +79,58 @@
     "    scaler_x2 = Scaler()\n",
     "    x2 = scaler_x2.fit_standardize(x2)\n",
     "\n",
-    "    #NEED ONE HOT ENCODING HERE\n",
-    "    x3 = np.array(data['education'])\n",
+    "    x3 = np.array(data['currentSmoker'])\n",
     "    x3 = np.reshape(x3, (x3.shape[0], 1))\n",
     "\n",
-    "    x4 = np.array(data['currentSmoker'])\n",
+    "    x4 = np.array(data['cigsPerDay'])\n",
     "    x4 = np.reshape(x4, (x4.shape[0], 1))\n",
+    "    scaler_x4 = Scaler()\n",
+    "    x4 = scaler_x4.fit_standardize(x4)\n",
     "\n",
-    "    x5 = np.array(data['cigsPerDay'])\n",
+    "    x5 = np.array(data['BPMeds'])\n",
     "    x5 = np.reshape(x5, (x5.shape[0], 1))\n",
-    "    scaler_x5 = Scaler()\n",
-    "    x5 = scaler_x5.fit_standardize(x5)\n",
-    "\n",
-    "    x6 = np.array(data['BPMeds'])\n",
+    "    \n",
+    "    x6 = np.array(data['prevalentStroke'])\n",
     "    x6 = np.reshape(x6, (x6.shape[0], 1))\n",
-    "    \n",
-    "    x7 = np.array(data['prevalentStroke'])\n",
+    "\n",
+    "    x7 = np.array(data['prevalentHyp'])\n",
     "    x7 = np.reshape(x7, (x7.shape[0], 1))\n",
-    "\n",
-    "    x8 = np.array(data['prevalentHyp'])\n",
-    "    x8 = np.reshape(x8, (x8.shape[0], 1))\n",
     "    \n",
-    "    x9 = np.array(data['diabetes'])\n",
-    "    x9 = np.reshape(x9, (x9.shape[0], 1))\n",
+    "    x8 = np.array(data['diabetes'])\n",
+    "    x8 = np.reshape(x8, (x8.shape[0], 1))\n",
     "\n",
-    "    x10 = np.array(data['totChol'])\n",
+    "    x9 = np.array(data['totChol'])\n",
+    "    x9 = np.reshape(x9, (x9.shape[0], 1))\n",
+    "    scaler_x9 = Scaler()\n",
+    "    x9 = scaler_x9.fit_standardize(x9)\n",
+    "\n",
+    "    x10 = np.array(data['sysBP'])\n",
     "    x10 = np.reshape(x10, (x10.shape[0], 1))\n",
     "    scaler_x10 = Scaler()\n",
     "    x10 = scaler_x10.fit_standardize(x10)\n",
     "\n",
-    "    x11 = np.array(data['sysBP'])\n",
+    "    x11 = np.array(data['diaBP'])\n",
     "    x11 = np.reshape(x11, (x11.shape[0], 1))\n",
     "    scaler_x11 = Scaler()\n",
     "    x11 = scaler_x11.fit_standardize(x11)\n",
     "\n",
-    "    x12 = np.array(data['diaBP'])\n",
+    "    x12 = np.array(data['BMI'])\n",
     "    x12 = np.reshape(x12, (x12.shape[0], 1))\n",
     "    scaler_x12 = Scaler()\n",
     "    x12 = scaler_x12.fit_standardize(x12)\n",
     "\n",
-    "    x13 = np.array(data['BMI'])\n",
+    "    x13 = np.array(data['heartRate'])\n",
     "    x13 = np.reshape(x13, (x13.shape[0], 1))\n",
     "    scaler_x13 = Scaler()\n",
     "    x13 = scaler_x13.fit_standardize(x13)\n",
     "\n",
-    "    x14 = np.array(data['heartRate'])\n",
+    "    x14 = np.array(data['glucose'])\n",
     "    x14 = np.reshape(x14, (x14.shape[0], 1))\n",
     "    scaler_x14 = Scaler()\n",
     "    x14 = scaler_x14.fit_standardize(x14)\n",
     "\n",
-    "    x15 = np.array(data['glucose'])\n",
-    "    x15 = np.reshape(x15, (x15.shape[0], 1))\n",
-    "    scaler_x15 = Scaler()\n",
-    "    x15 = scaler_x15.fit_standardize(x15)\n",
+    "    x15 = np.array(data['education'])\n",
+    "    x3 = np.reshape(x3, (x3.shape[0], 1))\n",
     "\n",
     "    X = [x1, x2, x3, x4, x5, x6, x7, x8, x9, x10, x11, x12, x13, x14, x15]\n",
     "    X = np.hstack(X)\n",
@@ -124,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +165,7 @@
        "(3107, 16)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +195,7 @@
        "(3107, 15)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -205,13 +224,45 @@
        "(549, 15)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "X_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.        ,  1.45632121,  4.        , ..., -0.24814503,\n",
+       "        -0.31840178, -0.40621065],\n",
+       "       [ 1.        ,  1.45632121,  1.        , ...,  0.04271922,\n",
+       "         2.42174032, -0.24199277],\n",
+       "       [ 1.        ,  0.8710576 ,  3.        , ..., -0.15361415,\n",
+       "         0.92711736,  0.78436895],\n",
+       "       ...,\n",
+       "       [ 0.        ,  0.51989944,  1.        , ..., -0.4759887 ,\n",
+       "        -0.65054022,  0.04538851],\n",
+       "       [ 0.        , -0.29946961,  2.        , ...,  0.39902794,\n",
+       "        -1.31481709,  0.4559332 ],\n",
+       "       [ 1.        , -1.46999683,  4.        , ..., -0.46144548,\n",
+       "         1.01015197,  0.04538851]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train"
    ]
   },
   {
@@ -741,7 +792,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
