change name one_hot_encode

--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -45,11 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def one_hot_encoding(data):\n",
+    "def one_hot_encode(data):\n",
     "    data = [str(item) for item in data]\n",
     "    unique_category = sorted(set(data))\n",
     "    category_index = {category : index for index, category in enumerate(unique_category)}\n",
