--- a/notebooks/one_hot_encoding.ipynb
+++ b/notebooks/one_hot_encoding.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def one_hot_encoding(data, name):\n",
+    "def one_hot_encode(data, name):\n",
     "    data = [str(item) for item in data]\n",
     "    unique_category = sorted(set(data))\n",
     "    category_index = {category : index for index, category in enumerate(unique_category)}\n",
@@ -94,7 +94,7 @@
     }
    ],
    "source": [
-    "result = one_hot_encoding(data, 'education_level')"
+    "result = one_hot_encode(data, 'education_level')"
    ]
   },
   {
